add new paramTest class