@@ -13,7 +13,16 @@ compileTestJava{
     options.encoding = 'UTF-8'
 }
 
-
+/*distributions {
+    applicationDefaultJvmArgs = ["--add-opens",
+                                 "java.base/jdk.internal.misc=ALL-UNNAMED", "-Dio.netty.tryReflectionSetAccessible=true"]
+    mainClassName = 'cl.domain.ServerLauncher'
+    archivesBaseName = 'your-service'
+    version = 'latest'
+    main {
+        baseName = 'your-service'
+    }
+}*/
 
 dependencies {
     testImplementation (
@@ -23,6 +32,7 @@ dependencies {
             "com.github.javafaker:javafaker:1.0.2"
     )
 }
+
 
 test {
     useJUnitPlatform()
